# true-alpha

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  install.sh  pyproject.toml  requirements-gpu.txt  requirements-inspyrenet.txt  requirements.txt  tpng  update.sh
docs/: PIPELINE.md
prompts/: transparent_asset_prompt.md
skills/transparent-png/: SKILL.md
transparent_png_lab/: alpha.py  cli.py  config.py  engines.py  pipeline.py  preview_server.py  save_dialog.py
transparent_png_lab/static/: app.js  style.css
transparent_png_lab/templates/: index.html
